# advent_of_code

./: Cargo.toml
advent_of_code/: Cargo.toml
advent_of_code/src/: aoc_tooling.rs  dir.rs  lib.rs  math.rs  parsing.rs
aoc2022/: Cargo.toml
aoc2023/: Cargo.toml
aoc2024/: Cargo.toml
aoc2025/: Cargo.toml
src/: aoc_tooling.rs  math.rs
