[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memoize = {version="0.4.1", features=["full"]}
regex = "1.10.2"
advent_of_code = {path="../advent_of_code"}
smallbitset = "0.7.1"
