[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
counter = "0.6.0"
graphalgs = "0.2.0"
memoize = "0.4.1"
nom = "7.1.3"
num = "0.4.1"
petgraph = "0.6.4"
regex = "1.10.2"
reqwest = {version = "0.12.9", features=["blocking"]}
advent_of_code = {path="../advent_of_code"}
