[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
counter = "0.6.0"
graphalgs = "0.2.0"
memoize = "0.4.1"
nom = "7.1.3"
num = "0.4.1"
petgraph = "0.6.4"
regex = "1.10.2"
advent_of_code = {path="../advent_of_code"}
itertools = "0.14.0"
union-find = "0.4.3"
good_lp = {version = "1.14.2", features = ["microlp"], default-features = false}
